recuperar contraseña, crear contraseña, buscador con Ajax admin cree un usuario, se le envie por correo al usuario que se registro una contraseña por defecto para que la pueda cambiar

--- a/apps/account/templates/login.html
+++ b/apps/account/templates/login.html
@@ -26,9 +26,14 @@
                     <input type="text" name="username" id="username" class="form-control" required>
                 </div>
 
-                <div class="mb-3">
+                <div class="mb-1">
                     <label for="password" class="form-label">Contraseña</label>
                     <input type="password" name="password" id="password" class="form-control" required>
+                </div>
+
+                <!-- Enlaces de ayuda -->
+                <div class="d-flex justify-content-between mt-2">
+                    <a href="{% url 'password_reset_request' %}" class="small text-decoration-none">¿Olvidaste tu contraseña?</a>
                 </div>
 
                 <button type="submit" class="btn btn-primary w-100 mt-3">Ingresar</button>
