--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -53,16 +53,6 @@
                         <i class="bi bi-cash-stack"></i> Transacciones
                     </a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">
-                        <i class="bi bi-cart-check"></i> Compras
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">
-                        <i class="bi bi-bar-chart"></i> Reportes
-                    </a>
-                </li>
                 {% endif %}
                 {% endif %}
 
@@ -70,7 +60,7 @@
                 {% if request.user.is_authenticated %}
                 {% if not request.user.is_superuser and request.user.rol != 'ADMIN' %}
 
-                {# OPERADOR DE COMPRAS -> Proveedores #}
+                {# COMPRAS -> Proveedores #}
                 {% if request.user.rol == 'COMPRAS' %}
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'suppliers:list' %}">
@@ -97,14 +87,7 @@
                 </li>
                 {% endif %}
 
-                {# FINANZAS -> Reportes (futuro) #}
-                {% if request.user.rol == 'FINANZAS' %}
-                <li class="nav-item">
-                    <a class="nav-link" href="#">
-                        <i class="bi bi-bar-chart"></i> Reportes
-                    </a>
-                </li>
-                {% endif %}
+                {# FINANZAS: se elimina Reportes del navbar #}
 
                 {% endif %}
                 {% endif %}
@@ -126,15 +109,20 @@
                                 <i class="bi bi-speedometer2"></i> Panel de Control
                             </a>
                         </li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
+                        <li><hr class="dropdown-divider"></li>
                         {% endif %}
+
                         <li><a class="dropdown-item" href="#"><i class="bi bi-person-circle"></i> Perfil</a></li>
                         <li><a class="dropdown-item" href="#"><i class="bi bi-gear"></i> Configuración</a></li>
+
+                        {# === NUEVO: Cambiar contraseña en el menú del usuario === #}
                         <li>
-                            <hr class="dropdown-divider">
+                            <a class="dropdown-item" href="{% url 'password_change' %}?next={{ request.path }}">
+                                <i class="bi bi-shield-lock"></i> Cambiar contraseña
+                            </a>
                         </li>
+
+                        <li><hr class="dropdown-divider"></li>
                         <li>
                             <a class="dropdown-item text-danger" href="{% url 'logout' %}">
                                 <i class="bi bi-box-arrow-right"></i> Cerrar sesión
