--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -1,5 +1,5 @@
 {% load static %}
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm">
+<nav class="navbar navbar-expand-lg navbar-dark bg-danger shadow-sm">
     <div class="container-fluid">
 
         {# ========= LOGO / ENLACE PRINCIPAL ========= #}
